--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.3.0",
     "@primevue/nuxt-module": "^4.3.3",
     "sass-embedded": "^1.86.3"
   }
