--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@iconify/vue": "^4.3.0",
     "@primevue/nuxt-module": "^4.3.3",
-    "sass-embedded": "^1.86.3"
+    "sass-embedded": "^1.86.3",
+    "typescript": "^5.8.3"
   }
 }
