--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nuxt": "^3.16.2",
     "primevue": "^4.3.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@iconify/vue": "^4.3.0",
