--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^9.5.5",
     "@primeuix/themes": "^1.0.1",
     "@primevue/forms": "^4.3.3",
     "nuxt": "^3.16.2",
