--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@nuxtjs/i18n": "^9.5.5",
     "@primeuix/themes": "^1.0.1",
     "@primevue/forms": "^4.3.3",
+    "@vee-validate/nuxt": "^4.15.1",
+    "@vee-validate/zod": "^4.15.1",
     "nuxt": "^3.16.2",
     "primevue": "^4.3.3",
     "vue": "^3.5.13",
