--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-NUXT_PUBLIC_API_BASE=http://localhost:8080/
+PRODUCT_MICROSERVICE_URL=
+TRANSACTION_MICROSERVICE_URL=
+USER_MICROSERVICE_URL=
+PAYMENT_MICROSERVICE_URL=
